slight ui adjustments

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,26 +17,26 @@
     <color name="statusbar_back">#020123</color>
     <color name="statusbar_back1">#230202</color>
     <color name="statusbar_back2">#021302</color>
-    <color name="statusbar_back3">#3f3a01</color>
+    <color name="statusbar_back3">#433a01</color>
     <color name="background_default">#090913</color>
     <color name="icon_background">#f1f1ff</color><!-- day theme value -->
     <color name="background">#191740</color>
     <color name="background1">#400c0c</color>
     <color name="background2">#133113</color>
-    <color name="background3">#494502</color>
+    <color name="background3">#514502</color>
     <color name="background_query">#232350</color>
     <color name="background_query1">#592020</color>
     <color name="background_query2">#234923</color>
-    <color name="background_query3">#505000</color>
+    <color name="background_query3">#504a00</color>
     <color name="background_list">#02021e</color>
     <color name="background_list1">#1e0202</color>
     <color name="background_list2">#021e02</color>
-    <color name="background_list3">#1d1d02</color>
+    <color name="background_list3">#221c02</color>
     <color name="light_grey_default">#100e13</color>
     <color name="light_grey">#201957</color>
     <color name="light_grey1">#5a1010</color>
     <color name="light_grey2">#204020</color>
-    <color name="light_grey3">#504503</color>
+    <color name="light_grey3">#5f4f00</color>
     <color name="light_grey_alpha">#20030333</color>
     <color name="light_grey_alpha1">#20330303</color>
     <color name="light_grey_alpha2">#20033303</color>
